Fix wrap.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,6 +12,10 @@ body {
   min-height: 100vh;
 }
 
+a {
+  overflow-wrap: break-word;
+}
+
 strong {
   font-weight: 700;
 }
